# general-predicate-testing

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml  rust-clippy.yml
apps/frontend/src/: App.tsx
docusaurus/: docusaurus.config.js
docusaurus/docs/: backend.md  frontend.md  gpt-algorithm.md  gpt-basics.md  graph-reduction.md  internal-representation.md  parser.md  software-architecture.md
docusaurus/src/pages/: index.tsx
examples/gpt-lang/: complex.gpt  complex_hard.gpt  complex_medium.gpt  complex_og.gpt  complex_or.gpt  complex_small.gpt  else_if.gpt  geometric.gpt  or.gpt  or_and_or.gpt  other_or.gpt  paid_vacation_days.gpt  paid_vacation_days_with_or.gpt  price_calculation.gpt  smelting.gpt  three_or.gpt
gpt-cli/: Cargo.toml
gpt-cli/src/: main.rs
gpt-common/: Cargo.toml
gpt-common/src/: bva.rs  dto.rs  interval.rs  lib.rs  main.rs  parser.rs  prelude.rs  test_case_generator.rs  test_value_generator.rs  util.rs
gpt-common/src/graph_reduction/: MONKE.rs  common.rs  least_losing_components.rs  least_losing_edges.rs  least_losing_nodes_reachable.rs  mod.rs
gpt-common/src/ir/: ast_to_ir.rs  ir_to_ntuple.rs  mod.rs
gpt-common/src/parser/: ast.rs  ast_to_ir.rs  condition.rs  feature.rs  if_statement.rs  ir.rs  ir_to_ntuple.rs  mod.rs  primitives.rs  utils.rs  var_declaration.rs
gpt-frontend/: Cargo.toml  README.md  index.html  netlify.toml
gpt-frontend/src/: main.rs  text_input.rs
gpt-frontend/src/components/: error_display.rs  manual_tester.rs  mod.rs  test_case_table.rs  usage_guide.rs
gpt-frontend/styles/: index.scss
(+16 files in other folders)
