[package]
name = "gpt-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
thiserror = "1"
petgraph = "0.6.2"
urlencoding = "2.1.2"
log = "0.4.6"
itertools = { version = "0.10.5", features = ["use_std"] }
serde = { version = "1.0.160", features = ["derive"] }

[dev-dependencies]
rstest = "0.17.0"
pretty_assertions = "1.3.0"
